--- a/all.css
+++ b/all.css
@@ -1,3 +1,146 @@
-h1{
-    color: blue;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+*,*::before, *::after{
+    box-sizing: border-box;
+    
+}
+.wrap{
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.header{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+   
+}
+.header .menu{
+    display: flex;
+    gap: 24px;
+}
+.header .menu li a{
+    font-size: 28px;
+    font-weight: 700;
+    color: black;
+    display: inline-block;
+    text-decoration: none;
+    
+}
+.cover {
+  display: flex;
+  align-items: center;         
+  justify-content: center;     
+  gap: 24px;
+  width: 100%;
+  padding: 24px 0;
+}
+
+.cover img {
+  width: 50%;
+  height: auto;
+  object-fit: cover;
+}
+.mobile{
+    display: none;
+}
+
+.newest {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;     
+}
+a.tag {
+    color: blue;
+    text-decoration: none;
+    padding-bottom: 8px;
+    line-height: 1.5;
+    font-size: 24px;
+}
+
+.tag-list {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin: 12px 0;
+}
+
+a.btn {
+    background-color: blue;
+    color: white;
+    border-radius: 40px;
+    padding: 6px 12px;
+    text-decoration: none;
+    font-size: 16px;
+}
+.title{
+   font-size: 28px;
+   font-weight: 700; 
+}
+
+.content{
+    margin: 0 auto;
+    max-width: 636px;
+}
+.article{
+    margin-top: 80px;
+    margin-bottom: 48px;
+}
+h2{
+    font-weight: 700;
+    font-size: 28px;
+    margin-bottom: 24px;
+}
+
+
+
